--- a/blog.css
+++ b/blog.css
@@ -113,4 +113,12 @@ input{
         width:350px;
 
     }
+    #n{
+         margin-left: 100px;
+         font-size: 28px;
+    }
+    #n1{
+         margin-left: 100px;
+          font-size: 29px;
+    }
 }
